PyMaker/datas/object2/RawHTML/i18401/Python_DOC_referPages.indentationerror-in-python-main-files.txt
<div class="post-text" itemprop="text">
<p>I am a newbie in python while I execute Hello World code on sublime text 2 I face this error</p>
<pre><code>    Traceback (most recent call last):
  File "G:\Python32\lib\runpy.py", line 142, in _run_module_as_main
    mod_name, loader, code, fname = _get_main_module_details()
  File "G:\Python32\lib\runpy.py", line 185, in _get_main_module_details
    return _get_module_details(main_name)
  File "G:\Python32\lib\runpy.py", line 114, in _get_module_details
    code = loader.get_code(mod_name)
  File "G:\Python32\lib\pkgutil.py", line 281, in get_code
    self.code = compile(source, self.filename, 'exec')
  File "G:\Python32\__main__.py", line 2
    |
    ^
IndentationError: unexpected indent
[Finished in 0.1s with exit code 1]
</code></pre>
<p>Please help me</p>
</div>
<div class="post-text" itemprop="text">
<p>On line 2 of your program, the code indentation isn't correct. </p>
</div>
<div class="post-text" itemprop="text">
<p>indentation is Python’s way of grouping statements. At the interactive prompt, you have to type a tab or space(s) for each indented line.
When a compound statement is entered interactively, it must be followed by a blank line to indicate completion (since the parser cannot guess when you have typed the last line). Note that each line within a basic block must be indented by the same amount.</p>
</div>
<span class="comment-copy">A copy of the code that produces the error would be nice</span>
<span class="comment-copy">On line 2 of your program, the code indentation is wrong. Either you've indented to much or not enough. We'd have to see your code to see.</span>
<span class="comment-copy">I had this problem /usr/bin/python: can't find 'main' module in '' [Finished in 0.2s with exit code 1] so I create <b>main</b>.py as someone said stackoverflow.com/a/17100701/2749197</span>
<span class="comment-copy">@Ahmadsyr: You can't get further help unless you provide the code.</span>
<span class="comment-copy">my code is just this print("Hello World")</span>
<span class="comment-copy">print("Hello World")</span>
<span class="comment-copy">@Ahmadsyr: Show us the code to get a better help.</span>
<span class="comment-copy">I had this problem /usr/bin/python: can't find '<b>main</b>' module in '' [Finished in 0.2s with exit code 1] so I create <b>main</b>.py as someone said <a href="http://stackoverflow.com/a/17100701/2749197">stackoverflow.com/a/17100701/2749197</a></span>
<span class="comment-copy">That's a folder structure, not code. If you don't see, that this is no Python code please read the <a href="http://docs.python.org/3/tutorial/" rel="nofollow noreferrer">tutorial</a> and try to understand the language.</span>
